# bioRxiv_grid

./: README.md  pyproject.toml
configs/: example.json
src/biorxiv_grid/: __init__.py  biorxiv_client.py  cli.py  config.py  filter_engine.py  llm.py  models.py  pipeline.py  summarizer.py
