[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biorxiv-grid"
version = "0.1.0"
description = "Scan latest bioRxiv preprints, filter by keyword/LLM, and summarize with LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
biorxiv-grid = "biorxiv_grid.cli:main"
